--- a/css/main.css
+++ b/css/main.css
@@ -23,9 +23,11 @@ figure {
 
   --container_padding-h: 1rem;
   --container_padding-v: 0.125rem;
+  --card-gap: 1rem;
   --card_width: 10rem;
   --card_margin-h: 0.5rem;
   --card--content_margin-h: 0.125rem;
+
 }
 .card {
   --card_border-width: 0.25rem;
@@ -38,11 +40,13 @@ figure {
   display: inline-block;
 }
 
+
 /***************************************/
 /************ MEDIUM SCREEN ************/
 /***************************************/
 @media (min-width: 720px) {
   .container {
+    --card-gap: 1.5rem;
     --card_width: 15rem;
     --card_margin-h: 0.75rem;
     --card--content_margin-h: 0.25rem;
@@ -58,6 +62,7 @@ figure {
 /************************************/
 @media (min-width: 960px) {
   .container {
+    --card-gap: 2rem;
     --container_padding-h: 2rem;
     --card_width: 20rem;
     --card_margin-h: 1rem;
